# QuestionnairesAPI

./: .dockerignore  .gitignore  BRANCHING_LOGIC_IMPLEMENTATION.md  BRANCHING_LOGIC_SUMMARY.md  DEPLOYMENT_NOTES.md  DOCKER_FINAL_SUMMARY.md  DOCKER_STRUCTURE.md  Dockerfile  EQ5DEL_IMPLEMENTATION_SUMMARY.md  EXPLICITNESS_AUDIT_SUMMARY.md  FAGERSTROM_IMPLEMENTATION_SUMMARY.md  HETERO_QUESTIONNAIRES_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PRISE_M_TESTING_GUIDE.md  PYTHON_DEPLOYMENT_ANALYSIS.md  Q-TEST.md  QUESTIONNAIRE_EXPLICITNESS_AUDIT.md  README.md  TESTING.md  TEST_DEPLOYMENT.md  TEST_SUMMARY.md  TODO.md  __init__.py  example_usage.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run_api.py  run_tests.py  setup.py  supervisord.conf  test_system.py  verify_docker_setup.sh  verify_tests.py
.cursor/rules/: questionnaires.mdc
api/: __init__.py  dependencies.py  main.py  models.py  schemas.py  service.py  utils.py
api/routes/: __init__.py  auto.py  hetero.py
app/: README.md  next.config.ts
app/app/: globals.css  layout.tsx  page.tsx
core/: json_loader.py  models.py  registry.py  scoring.py
docs/: AUDIT_PLAN.md
questionnaires/: EXTRACTION_STATUS.md  PHASE1_COMPLETION_SUMMARY.md  QUESTIONNAIRE_EXTRACTION_SUMMARY.md  README.md  SESSION_SUMMARY.md  __init__.py  abc.py  adhd_rs.py  aim.py  alda.py  aliment.py  alimentaire.py  alimentation.py  als.py  altman.py  amiel_lebigre.py  aq.py  aq12.py  asq.py  asrs.py  atac.py  athf.py  aut_abc.py  aut_adhdrs.py  aut_aim.py  aut_als.py  aut_anamn.py  aut_anh_so.py  aut_asq.py  aut_atac.py  aut_atcdlt.py  aut_bis10.py  aut_brief.py  aut_c1adir.py  aut_c1ados.py  aut_c1ados2.py  aut_c1antmed.py  aut_c1cridsm.py  aut_c1demo.py  aut_c1dsmdigs.py  (+167 more)
questionnaires/aim_short/: EXAMPLE_USAGE.md  QUICK_REFERENCE.md  README.md
questionnaires/als_short/: __init__.py  als_short.py
questionnaires/asrm/: README.md
questionnaires/asrs/: __init__.py  asrs.py
questionnaires/auto/: __init__.py
questionnaires/bis10/: __init__.py  bis10.py
questionnaires/csm/: __init__.py  csm.py
questionnaires/ctq/: __init__.py  ctq.py
questionnaires/data/: eq_5d_5l.json
questionnaires/epworth/: __init__.py  epworth.py
questionnaires/eq5d/: __init__.py
questionnaires/eq5del/: SCORING.md  __init__.py  eq5del.py
questionnaires/hetero/: __init__.py
tests/: __init__.py  conftest.py  test_aim_short.py  test_alda.py  test_altman.py  test_asrm.py  test_cgi_egf.py  test_cssrs.py  test_dsm5.py  test_epworth.py  test_eq5del.py  test_fagerstrom.py  test_fast.py  test_madrs.py  test_mars.py  test_mathys.py  test_mdq.py  test_prise_m.py  test_qids_sr16.py  test_stai_ya.py  test_wais3.py  test_wais4.py  test_ymrs.py
tools/: generate_audit_table.py  generate_questionnaires.py
(+101 files in other folders)
