[project]
name = "questionnairesapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrii Kulakovskyi",email = "andrii.kulakovskyi@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.104.0,<0.105.0)",
    "pydantic (>=2.5.0,<3.0.0)",
    "uvicorn[standard] (>=0.24.0,<0.25.0)",
    "python-multipart (>=0.0.6,<0.0.7)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=7.4.0,<8.0.0)",
    "pytest-cov (>=4.1.0,<5.0.0)"
]
